# mhaol

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/android-mobile/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/android-mobile/icons/: icon.icns
apps/android-mobile/src/: lib.rs  main.rs
apps/android-tv/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/android-tv/icons/: icon.icns
apps/android-tv/src/: lib.rs  main.rs
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/cloud/: CLAUDE.md  Cargo.toml  build.rs  package.json  tauri.conf.json  vite.config.ts
apps/cloud/icons/: icon.icns
apps/cloud/scripts/: headless.js  stage-windows-runtime.sh
apps/cloud/src/: catalog.rs  cloud_status.rs  database.rs  db.rs  documents.rs  firkins.rs  frontend.rs  fs_browse.rs  health.rs  image_cache.rs  ipfs_pins.rs  ipfs_stream.rs  lib.rs  libraries.rs  library_scan.rs  media_trackers.rs  metadata_enrich.rs  p2p.rs  p2p_stream.rs  paths.rs  player.rs  recommendations.rs  rom_extract.rs  search.rs  server.rs  state.rs  tmdb_match.rs  torrent.rs  torrent_completion.rs  users.rs  worker_bridge.rs  ytdl.rs
apps/cloud/src-tauri/: Cargo.toml  tauri.conf.json
apps/cloud/src-tauri/capabilities/: default.json
apps/cloud/src-tauri/src/: lib.rs  main.rs
apps/cloud/src/css/: app.css
apps/cloud/src/routes/: +layout.svelte  +page.svelte
apps/cloud/src/routes/peers/: +page.svelte
apps/cloud/src/routes/search/: +page.svelte
apps/cloud/web/: .prettierignore  eslint.config.js  package.json  svelte.config.js  vite.config.ts
apps/cloud/web/scripts/: nav-vite-plugin.mjs
apps/cloud/web/src/: app.html
apps/cloud/web/src/components/: DirectoryPicker.svelte
apps/cloud/web/src/css/: app.css
apps/cloud/web/src/lib/: api-base.ts  artists.service.ts  catalog.service.ts  cloud-health.service.ts  database.service.ts  documents.service.ts  firkins.service.ts  image-cache.ts  libraries.service.ts  lrclib-match.service.ts  media-tracker.service.ts  recommendations.service.ts  search.service.ts  torrent-status.service.ts  user-identity.service.ts  youtube-match.service.ts
apps/cloud/web/src/routes/: +layout.svelte  +page.svelte
apps/cloud/web/src/services/: catalog.service.ts  client-identity.service.ts  cloud-library.service.ts  cloud-peer.service.ts  clouds.service.ts  connect-invite.service.ts  connection-config.service.ts  database.service.ts  downloads.service.ts  ed2k.service.ts  fetch-cache.service.ts  firkin-playback.service.ts  firkin-stream.service.ts  music-recommendations.service.ts  node-connection.service.ts  p2p-stream.service.ts  peer-library.service.ts  pins.service.ts  player.service.ts  profile.service.ts  room-connection.ts  roster.service.ts  server-catalog.service.ts  signaling-chat.service.ts  subs-lyrics-finder.service.ts  youtube-library.service.ts
apps/cloud/web/src/transport/: rpc.type.ts  transport-context.ts  transport.type.ts  ws-transport.ts
apps/cloud/web/src/types/: catalog.type.ts  cloud-peer.type.ts  connection-config.type.ts  ed2k.type.ts  firkin.type.ts  music-recommendations.type.ts  p2p-stream.type.ts  peer-library.type.ts  player.type.ts  roster.type.ts  server-catalog.type.ts  (+2 more)
apps/flix/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/flix/src-tauri/capabilities/: default.json
apps/flix/src-tauri/src/: lib.rs  main.rs
apps/hub/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/hub/src-tauri/src/: lib.rs  main.rs
apps/node/: CLAUDE.md  Cargo.toml
apps/node/src/: book_recommendations_worker.rs  game_recommendations_worker.rs  lib.rs  llm_worker.rs  music_recommendations_worker.rs  recommendations_worker.rs  server.rs  signaling_rooms.rs  worker_bridge.rs
apps/node/src/api/: auth.rs  book_recommendations.rs  catalog.rs  database.rs  downloads.rs  ed2k.rs  favorites.rs  frontend.rs  game_recommendations.rs  hub.rs  identities.rs  images.rs  iptv.rs  libraries.rs  llm.rs  lyrics.rs  media.rs  media_lists.rs  mod.rs  music_recommendations.rs  musicbrainz.rs  network.rs  openlibrary.rs  p2p_stream.rs  pins.rs  player.rs  profiles.rs  queue.rs  recommendation_labels.rs  recommendations.rs  retroachievements.rs  search.rs  signaling_ws.rs  smart_pair.rs  smart_search.rs  subtitles.rs  tmdb.rs  torrent.rs  torrent_spanish.rs  websurfx.rs  (+4 more)
apps/node/src/db/: schema.rs
apps/node/src/modules/: ed2k.rs  image_tagger.rs  lyrics.rs  mod.rs  musicbrainz.rs  retroachievements.rs  tmdb.rs  torrent.rs  torrent_search.rs  wyzie_subs.rs  youtube_meta.rs  ytdl.rs
apps/node/src/peer_service/: catalog.rs  handshake.rs  mod.rs  partykit_client.rs  rpc_handler.rs  rpc_types.rs  types.rs  webrtc_peer.rs
apps/node/tests/: api_tests.rs
apps/player/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/player/src-tauri/src/: image_cache.rs  lib.rs  main.rs  ytdl_server.rs
apps/rendezvous/: CLAUDE.md  Cargo.toml
apps/rendezvous/src/: config.rs  health_check.rs  lib.rs  main.rs  rooms.rs  server.rs  signaling.rs  state.rs  status.rs  turn.rs  ws.rs
apps/rendezvous/src/setup/: coturn.rs  detect.rs  mod.rs  systemd.rs  tls.rs
apps/rendezvous/tests/: signaling_relay.rs
apps/server/backend/: CLAUDE.md  Cargo.toml
apps/server/backend/src/: lib.rs  server.rs  worker_bridge.rs
apps/server/backend/tests/: api_tests.rs
apps/signaling/: CLAUDE.md  Cargo.toml  package.json  vite.config.ts
apps/signaling/scripts/: headless.js
apps/signaling/src/: config.rs  lib.rs  main.rs  server.rs  status.rs  turn.rs  ws.rs
apps/signaling/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/signaling/src-tauri/src/: main.rs
apps/signaling/src/routes/: +layout.svelte  +page.svelte
apps/signaling/src/setup/: coturn.rs  mod.rs  systemd.rs
apps/tauri/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.player.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/torrent/src-tauri/: Cargo.toml  tauri.conf.json
apps/torrent/src-tauri/src/: lib.rs  main.rs
(+709 files in other folders)
