[workspace]
resolver = "2"
members = [
    "apps/frontend/src-tauri",
    "apps/node",
    "apps/signaling",
    "packages/identity",
    "packages/llm",
    "packages/queue",
    "packages/yt-dlp",
    "packages/torrent",
    "packages/ed2k",
    "packages/p2p-stream",
    "packages/recommendations",
]
