[workspace]
resolver = "2"
members = [
    "apps/frontend/src-tauri",
    "apps/node",
    "apps/cloud",
    "apps/signaling",
    "packages/identity",
    "packages/queue",
    "packages/yt-dlp",
    "packages/torrent",
    "packages/ed2k",
    "packages/ipfs",
    "packages/p2p-stream",
    "packages/recommendations",
]

# `core2 0.4.0` is the only published version and was yanked from crates.io.
# `multihash-codetable 0.1.x` (a transitive dep of `rust-ipfs`) still requires
# it, so we vendor the original source to keep resolution working.
[patch.crates-io]
core2 = { path = "vendored/core2" }
