[workspace]
resolver = "2"
members = [
    "apps/cloud",
    "apps/cloud/src-tauri",
    "apps/rendezvous",
    "packages/identity",
    "packages/yt-dlp",
    "packages/torrent",
    "packages/ipfs-core",
    "packages/ipfs-stream",
]

# `core2 0.4.0` is the only published version and was yanked from crates.io.
# `multihash-codetable 0.1.x` (a transitive dep of `rust-ipfs`) still requires
# it, so we vendor the original source to keep resolution working.
[patch.crates-io]
core2 = { path = "packages/ipfs-core/vendored/core2" }
