[package]
name = "mhaol-android-mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mhaol_android_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
mhaol-backend = { path = "../../packages/backend" }
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2"
log = "0.4"
