[package]
name = "mhaol-cloud"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mhaol-cloud"
path = "src/server.rs"

[dependencies]
mhaol-identity = { path = "../../packages/identity" }
mhaol-queue = { path = "../../packages/queue" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
surrealdb = { version = "2", features = ["kv-surrealkv"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
mhaol-p2p-stream = { path = "../../packages/p2p-stream" }
mhaol-yt-dlp = { path = "../../packages/yt-dlp" }
mhaol-torrent = { path = "../../packages/torrent" }
mhaol-ed2k = { path = "../../packages/ed2k" }
