[package]
name = "mhaol-node"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
embed-frontend = ["dep:rust-embed", "dep:mime_guess"]

[lib]
name = "mhaol_node"
path = "src/lib.rs"

[[bin]]
name = "mhaol-node"
path = "src/server.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
tracing = "0.1"
mhaol-identity = { path = "../../packages/identity" }
mhaol-queue = { path = "../../packages/queue" }
mhaol-recommendations = { path = "../../packages/recommendations" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
parking_lot = "0.12"
chrono = "0.4"
urlencoding = "2"
quick-xml = "0.37"
dirs = "5"
strsim = "0.11"
regex = "1"
once_cell = "1"
libc = "0.2"
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
mhaol-yt-dlp = { path = "../../packages/yt-dlp" }
mhaol-p2p-stream = { path = "../../packages/p2p-stream" }
mhaol-torrent = { path = "../../packages/torrent" }
mhaol-ed2k = { path = "../../packages/ed2k" }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
hf-hub = { version = "0.5", features = ["tokio"] }
webrtc = "0.12"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
