[package]
name = "mhaol-rendezvous"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mhaol-rendezvous"
path = "src/server.rs"

[dependencies]
mhaol-ipfs = { path = "../../packages/ipfs" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
