[package]
name = "mhaol-rendezvous"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mhaol_rendezvous"
path = "src/lib.rs"

[[bin]]
name = "mhaol-rendezvous"
path = "src/main.rs"

[dependencies]
mhaol-ipfs-core = { path = "../../packages/ipfs-core" }
mhaol-identity = { path = "../../packages/identity" }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"
mhaol-identity = { path = "../../packages/identity" }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
