[package]
name = "mhaol-flix-mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mhaol_flix_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
mhaol-backend = { path = "../../../packages/backend" }
