[package]
name = "mhaol-player-shell"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mhaol_player_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
mhaol-yt-dlp = { path = "../../../packages/yt-dlp" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
