[package]
name = "mhaol-torrent-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mhaol_torrent_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"
mhaol-torrent = { path = "../../../packages/torrent" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
